# sycl_points

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  mkdocs.yaml  package.xml
.github/workflows/: opencode-review.yml  opencode.yml  pages.yml
cmake/: SYCLCompiler.cmake  SYCLSetup.cmake
cpp/: CMakeLists.txt
cpp/examples/: device_query.cpp  example_lp_icp.cpp  example_memcpy.cpp  example_point_cloud.cpp  example_registration.cpp
cpp/include/sycl_points/algorithms/: color_gradient.hpp  covariance.hpp  intensity_correction.hpp  localizability_constrained_optimizer.hpp  localizability_detection.hpp  outlier_removal_filter.hpp  polar_downsampling.hpp  preprocess_filter.hpp  registration.hpp  registration_factor.hpp  registration_lp_icp.hpp  registration_result.hpp  transform.hpp  voxel_downsampling.hpp
cpp/include/sycl_points/algorithms/common/: coordinate_system.hpp  filter_by_flags.hpp  prefix_sum.hpp  random.hpp  transform.hpp  voxel_constants.hpp  workgroup_utils.hpp
cpp/include/sycl_points/algorithms/deskew/: imu_deskew.hpp  relative_pose_deskew.hpp
cpp/include/sycl_points/algorithms/feature/: covariance.hpp  photometric_gradient.hpp
cpp/include/sycl_points/algorithms/filter/: intensity_correction.hpp  intensity_gaussian.hpp  intensity_local_mean_norm.hpp  intensity_zscore.hpp  outlier_removal_filter.hpp  polar_downsampling.hpp  preprocess_filter.hpp  range_bias_correction.hpp  voxel_downsampling.hpp
cpp/include/sycl_points/algorithms/filter/preprocess_operator/: angle_incidence_filter_operator.hpp  box_filter_operator.hpp  common.hpp  farthest_point_sampling_operator.hpp  mixed_random_sampling_operator.hpp  preprocess_operator_base.hpp  random_sampling_operator.hpp  weighted_sampling_operator.hpp
cpp/include/sycl_points/algorithms/imu/: imu_factor.hpp  imu_initial_alignment.hpp  imu_preintegration.hpp  imu_velocity_corrector.hpp
cpp/include/sycl_points/algorithms/knn/: bruteforce.hpp  kdtree.hpp  knn.hpp  lbvh.hpp  octree.hpp  result.hpp
cpp/include/sycl_points/algorithms/lio/: lio_linearized_result.hpp  lio_registration.hpp  lio_registration_params.hpp  lio_registration_result.hpp
cpp/include/sycl_points/algorithms/mapping/: covariance_aggregation_mode.hpp  occupancy_grid_map.hpp  occupancy_grid_map_cpu.hpp  voxel_hash_map.hpp
cpp/include/sycl_points/algorithms/registration/: anderson_acceleration.hpp  bhattacharyya.hpp  degenerate_regularization.hpp  deskew_registration_pipeline.hpp  dogleg_step.hpp  factor.hpp  linearized_result.hpp  map_prior.hpp  photometric.hpp  photometric_factor.hpp  registration.hpp  registration_params.hpp  registration_pipeline.hpp  registration_pipeline_params.hpp  result.hpp  robust.hpp  robust_registration_pipeline.hpp  rotation_constraint.hpp
cpp/include/sycl_points/algorithms/registration/pipeline/: aligner.hpp  robust.hpp  velocity_update.hpp
cpp/include/sycl_points/algorithms/robust/: robust.hpp
cpp/include/sycl_points/imu/: imu_factor.hpp  imu_preintegration.hpp
cpp/include/sycl_points/io/: point_cloud_reader.hpp  point_cloud_writer.hpp
cpp/include/sycl_points/pipeline/: adaptive_motion_predictor.hpp  lidar_inertial_odometry.hpp  lidar_inertial_odometry_params.hpp  lidar_odometry.hpp  lidar_odometry_params.hpp  motion_predictor.hpp  odometry_common_params.hpp  pointcloud_processing.hpp  range_bias_estimator.hpp  submapping.hpp
cpp/include/sycl_points/points/: point_cloud.hpp  types.hpp
cpp/include/sycl_points/ros2/: convert.hpp  covariance_marker_publisher.hpp  declare_lidar_odometry_params.hpp  enhanced_reflectivity.hpp
cpp/include/sycl_points/utils/: eigen_utils.hpp  sycl_utils.hpp
cpp/tests/: test_downsampling_filters.cpp  test_eigen_utils.cpp  test_file_io.cpp  test_imu_deskew.cpp  test_imu_factor.cpp  test_imu_preintegration.cpp  test_intensity_correction.cpp  test_intensity_gaussian.cpp  test_intensity_local_mean_norm.cpp  test_kdtree.cpp  test_lbvh.cpp  test_lidar_odometry_imu.cpp  test_lio_registration.cpp  test_localizability_detection.cpp  test_map_prior.cpp  test_occupancy_grid_map.cpp  test_octree.cpp  test_photometric_factor.cpp  test_preprocess_filter.cpp  test_range_bias_estimator.cpp  test_registration_pipeline.cpp  test_relative_pose_deskew.cpp  test_select_device.cpp  test_voxel_hash_map.cpp  test_voxel_nearest_neighbor.cpp
docs/: design_philosophy.md  i_octree_design.md  index.md  install_adaptive_cpp.md  install_dpcpp_nvidia.md  octree_benchmark_comparison.md
docs/javascripts/: mathjax.js
examples/: device_query.cpp  example_memcpy.cpp  example_point_cloud.cpp  example_registration.cpp  test.cpp  test_memcpy.cpp  test_point_cloud.cpp  test_registration.cpp
include/sycl_points/: covariance.hpp  downsampling.hpp  eigen_utils.hpp  knn_search.hpp  point_cloud.hpp  point_cloud_reader.hpp  registration.hpp  sycl_utils.hpp
ros2/sycl_points/: CMakeLists.txt
ros2/sycl_points_ros2/: CMakeLists.txt  README.md  package.xml
ros2/sycl_points_ros2/config/: lidar_inertial_odometry.yaml  lidar_odometry.yaml
ros2/sycl_points_ros2/include/sycl_points_ros2/: covariance_marker_publisher.hpp  declare_lidar_inertial_odometry_params.hpp  declare_lidar_odometry_params.hpp  declare_odometry_common_params.hpp  lidar_inertial_odometry_bag_eval_node.hpp  lidar_inertial_odometry_base_node.hpp  lidar_inertial_odometry_node.hpp  lidar_odometry_bag_eval_node.hpp  lidar_odometry_base_node.hpp  lidar_odometry_node.hpp
ros2/sycl_points_ros2/launch/: lidar_inertial_odometry_bag_eval_launch.py  lidar_inertial_odometry_launch.py  lidar_odometry_bag_eval_launch.py  lidar_odometry_launch.py
ros2/sycl_points_ros2/rviz2/: rviz2.rviz
ros2/sycl_points_ros2/src/: lidar_inertial_odometry_bag_eval_node.cpp  lidar_inertial_odometry_base_node.cpp  lidar_inertial_odometry_node.cpp  lidar_odometry_bag_eval_node.cpp  lidar_odometry_base_node.cpp  lidar_odometry_node.cpp
tests/: test_algorithms.cpp  test_bitonic_sort.cpp  test_eigen_utils.cpp  test_file_io.cpp  test_imu_deskew.cpp  test_kdtree.cpp  test_occupancy_grid_map.cpp  test_octree.cpp  test_relative_pose_deskew.cpp  test_voxel_hash_map.cpp
(+60 files in other folders)
